--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -8,7 +8,7 @@ import '../styles/global.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>ASD Text Snippets</title>
+		<title>AWS Connect JSON Generator</title>
 	</head>
 	<body>
 		<slot />
