--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,7 @@ import Baselayout from '../layouts/Baselayout.astro';
 				CTI_V2_apiUrl: '/api/now/table/sys_user',
 				CTI_V2_uriParams:
 					'?sysparm_query=employee_number={pin}^active=true&sysparm_display_value=true',
-				CTITrayAgain: '<speak>Invalid user ID. Please try again.</speak>',
+				CTITryAgain: '<speak>Invalid user ID. Please try again.</speak>',
 			},
 			fem: {
 				femStatus: '$.External.femStatus',
