--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ import Baselayout from '../layouts/Baselayout.astro';
 					</div>
 				</div>
 
-				<div class="flex flex-wrap gap-3">
+				<div class="flex flex-wrap gap-3 items-center justify-center">
 					<button
 						id="addField"
 						class="px-4 py-2 text-sm bg-blue-600 text-white rounded hover:bg-blue-700"
