--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -10,7 +10,7 @@ import '../styles/global.css';
 		<meta name="generator" content={Astro.generator} />
 		<title>AWS Connect JSON Generator</title>
 	</head>
-	<body>
+	<body class="bg-gray-50 min-h-screen p-8">
 		<slot />
 	</body>
 </html>
